# cuda-scene-detection

./: CMakeLists.txt  README.md  build.bat  cuda_kernels.cu  ffmpeg_nvdec_scene_detect.cpp  install_ffmpeg.bat
